--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.17.0
   basic_utils: ^4.2.0
   geolocator: ^8.0.3
+  number_paginator: ^0.0.2
   extended_masked_text: ^2.3.1
   shared_preferences: ^2.0.13
   pull_to_refresh: ^2.0.0
