--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   extended_masked_text: ^2.3.1
   shared_preferences: ^2.0.13
   pull_to_refresh: ^2.0.0
+  flutter_speed_dial: ^5.0.0+1
   flutter_localizations:
     sdk: flutter
 
