--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -87,7 +87,7 @@ the internet.
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value="AIzaSyD6rLP9XwSyIamLRnN3Ph--A6SmV9p45Bg"/>
+           android:value="[Google API Key]"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
